crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_enum_mixed_variants.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for FlexWrap {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        match (self, other) {
            (Self::Nowrap(a_v0), Self::Nowrap(b_v0)) => {
                a_v0.semantic_eq(b_v0, source_text)
            }
            (
                Self::Wrap { wrap: a_wrap, balance: a_balance, .. },
                Self::Wrap { wrap: b_wrap, balance: b_balance, .. },
            ) => {
                a_wrap.semantic_eq(b_wrap, source_text)
                    && a_balance.semantic_eq(b_balance, source_text)
            }
            (
                Self::WrapReverse {
                    wrap_reverse: a_wrap_reverse,
                    balance: a_balance,
                    ..
                },
                Self::WrapReverse {
                    wrap_reverse: b_wrap_reverse,
                    balance: b_balance,
                    ..
                },
            ) => {
                a_wrap_reverse.semantic_eq(b_wrap_reverse, source_text)
                    && a_balance.semantic_eq(b_balance, source_text)
            }
            _ => false,
        }
    }
}
