crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_enum_single_field_variants.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for Display {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        match (self, other) {
            (Self::Block(a_v0), Self::Block(b_v0)) => a_v0.semantic_eq(b_v0, source_text),
            (Self::Inline(a_v0), Self::Inline(b_v0)) => {
                a_v0.semantic_eq(b_v0, source_text)
            }
            (Self::None(a_v0), Self::None(b_v0)) => a_v0.semantic_eq(b_v0, source_text),
            _ => false,
        }
    }
}
