crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_enum_skip_field.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for Foo {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        match (self, other) {
            (Foo::Bar { name: a_name, .. }, Foo::Bar { name: b_name, .. }) => {
                a_name.semantic_eq(&b_name, source_text)
            }
            _ => false,
        }
    }
}
