crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_enum_with_named_struct_variant_multiple_fields.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for BorderStyle {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        match (self, other) {
            (BorderStyle::Solid, BorderStyle::Solid) => true,
            (
                BorderStyle::Dotted { radius: a_radius, spacing: a_spacing },
                BorderStyle::Dotted { radius: b_radius, spacing: b_spacing },
            ) => {
                a_radius.semantic_eq(&b_radius, source_text)
                    && a_spacing.semantic_eq(&b_spacing, source_text)
            }
            _ => false,
        }
    }
}
