crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_enum_with_named_struct_variant_single_field.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for BorderStyle {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        match (self, other) {
            (Self::Solid, Self::Solid) => true,
            (
                Self::Dashed { width: a_width, .. },
                Self::Dashed { width: b_width, .. },
            ) => a_width.semantic_eq(b_width, source_text),
            _ => false,
        }
    }
}
