crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_semantic_eq__semantic_eq_tuple_struct_single_field.snap
---
source: crates/csskit_derives/src/test/test_semantic_eq.rs
expression: pretty
---
#[automatically_derived]
impl ::css_parse::SemanticEq for Length {
    fn semantic_eq(&self, other: &Self, source_text: &str) -> bool {
        use ::css_parse::SemanticEq;
        let Length(a0) = self;
        let Length(b0) = other;
        a0.semantic_eq(&b0, source_text)
    }
}
